--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -39,6 +39,74 @@
                 </ion-item>
               </ion-col>
             </ion-row>
+            <h3>Pumps</h3>
+            <div formGroupName="pumps">
+              <ion-row formGroupName="pump 1">
+                <ion-col size="6">
+                  <ion-item>
+                    <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
+                    <ion-label>Pump 1</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="1" size="5">
+                  <ion-item>
+                    <ion-input placeholder="ratio (ml/l)" type="number" formControlName="value"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row formGroupName="pump 2">
+                <ion-col size="6">
+                  <ion-item>
+                    <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
+                    <ion-label>Pump 2</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="1" size="5">
+                  <ion-item>
+                    <ion-input placeholder="ratio (ml/l)" type="number" formControlName="value"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row formGroupName="pump 3">
+                <ion-col size="6">
+                  <ion-item>
+                    <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
+                    <ion-label>Pump 3</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="1" size="5">
+                  <ion-item>
+                    <ion-input placeholder="ratio (ml/l)" type="number" formControlName="value"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row formGroupName="pump 4">
+                <ion-col size="6">
+                  <ion-item>
+                    <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
+                    <ion-label>Pump 4</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="1" size="5">
+                  <ion-item>
+                    <ion-input placeholder="ratio (ml/l)" type="number" formControlName="value"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row formGroupName="pump 5">
+                <ion-col size="6">
+                  <ion-item>
+                    <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
+                    <ion-label>Pump 5</ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="1" size="5">
+                  <ion-item>
+                    <ion-input placeholder="ratio (ml/l)" type="number" formControlName="value"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+            </div>
             <h3>Desired Value</h3>
             <ion-row>
               <ion-item lines="none">
