--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -12,93 +12,95 @@
       <!--Card Content-->
       <form [formGroup]="phForm">
         <div *ngIf="isOpen">
-          <hr color="grey" />
+          <hr color="grey"/>
           <div class="group">
-            <ion-row>
-              <ion-col size="12">
-                <ion-item lines="none">
-                  <ion-checkbox formControlName="monitoring_only" mode="md" (ionChange)="onMonitoringOnly()"></ion-checkbox>
-                  <ion-label>Monitoring Only</ion-label>
-                </ion-item>
-              </ion-col>
-            </ion-row>
+            <ion-item lines="none">
+              <ion-checkbox formControlName="monitoring_only" mode="md" (ionChange)="onMonitoringOnly()" slot="end"></ion-checkbox>
+              <ion-label>Monitoring Only</ion-label>
+            </ion-item>
+            <hr color="grey"/>
           </div>
   
           <div *ngIf="!phForm.get('monitoring_only').value" [formGroup]="controlForm">
-            <h3>Dosing Mechanism</h3>
-            <ion-row>
-              <ion-col size="12">
-                <ion-radio-group formControlName="ph_up_down">
-                  <ion-item lines="none">
-                    <ion-radio mode="md" value="ph_down"></ion-radio>
-                    <ion-label>pH down</ion-label>
-                    <ion-radio mode="md" value="ph_up"></ion-radio>
-                    <ion-label>pH up</ion-label>
-                  </ion-item>
-                </ion-radio-group>
-              </ion-col>
-            </ion-row>
-  
-            <ion-row>
-              <ion-col size="5">
+            <div class="settings-group">
+              <h3>Dose Settings</h3>
+              <ion-list>
                 <ion-item>
-                  <ion-label position="floating">Dosing Time</ion-label>
-                  <ion-input formControlName="dosing_time" type="number"></ion-input>
+                  <ion-label position="floating">Dose Time</ion-label>
+                  <ion-input formControlName="dosing_time"></ion-input>
                 </ion-item>
-              </ion-col>
-              <ion-col offset="1" size="5">
                 <ion-item>
                   <ion-label position="floating">Dosing Interval</ion-label>
                   <ion-input formControlName="dosing_interval" type="number"></ion-input>
                 </ion-item>
-              </ion-col>
-            </ion-row>
+              </ion-list>  
+            </div>
+            
+            <div class="settings-group">
+              <h3>Pumps</h3>
+              <ion-list formGroupName="pumps">
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="pump_1_enabled"></ion-toggle>
+                  <ion-label>Pump 6</ion-label>
+                  <ion-label>pH Up</ion-label>
+                </ion-item>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="pump_2_enabled"></ion-toggle>
+                  <ion-label>Pump 7</ion-label>
+                  <ion-label>pH Down</ion-label>
+                </ion-item>
+              </ion-list>
+            </div>
   
-            <h3>Desired Value</h3>
+            <div class="settings-group">
+              <h3>Desired Value</h3>
+              <ion-row>
+                <ion-item lines="none">
+                  <ion-checkbox formControlName="day_and_night" mode="md"></ion-checkbox>
+                  <ion-label >Different Targets for Day and Night</ion-label>
+                </ion-item>
+              </ion-row>
+              <ion-row *ngIf="controlForm.get('day_and_night').value">
+                <ion-col size="4">
+                  <ion-item>
+                    <ion-label position="floating">Day Target</ion-label>
+                    <ion-input formControlName="day_target_value" type="number"></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="2" size="4">
+                  <ion-item>
+                    <ion-label position="floating">Night Target</ion-label>
+                    <ion-input formControlName="night_target_value" type="number"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="!controlForm.get('day_and_night').value">
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-label position="floating">Target</ion-label>
+                    <ion-input formControlName="target_value" type="number"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+            </div>
+          </div>
+          <div class="settings-group">
+            <h3>Alarm Settings</h3>
             <ion-row>
-              <ion-item lines="none">
-                <ion-checkbox formControlName="day_and_night" mode="md"></ion-checkbox>
-                <ion-label >Different Targets for Day and Night</ion-label>
-              </ion-item>
-            </ion-row>
-            <ion-row *ngIf="controlForm.get('day_and_night').value">
-              <ion-col size="4">
+              <ion-col size="5">
                 <ion-item>
-                  <ion-label position="floating">Day Target</ion-label>
-                  <ion-input formControlName="day_target_value" type="number"></ion-input>
+                  <ion-label position="floating">Min</ion-label>
+                  <ion-input formControlName="alarm_min" type="number"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col offset="2" size="4">
+              <ion-col offset="1" size="5">
                 <ion-item>
-                  <ion-label position="floating">Night Target</ion-label>
-                  <ion-input formControlName="night_target_value" type="number"></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row *ngIf="!controlForm.get('day_and_night').value">
-              <ion-col size="12">
-                <ion-item>
-                  <ion-label position="floating">Target</ion-label>
-                  <ion-input formControlName="target_value" type="number"></ion-input>
+                  <ion-label position="floating">Max</ion-label>
+                  <ion-input formControlName="alarm_max" type="number"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
           </div>
-          <h3>Alarm Settings</h3>
-        <ion-row>
-          <ion-col size="5">
-            <ion-item>
-              <ion-label position="floating">Min</ion-label>
-              <ion-input formControlName="alarm_min" type="number"></ion-input>
-            </ion-item>
-          </ion-col>
-          <ion-col offset="1" size="5">
-            <ion-item>
-              <ion-label position="floating">Max</ion-label>
-              <ion-input formControlName="alarm_max" type="number"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
         </div>
       </form>
     </ion-grid>
