Power Outlet UI complete

--- a/Automation-App/src/app/components/air-temperature/air-temperature.component.html
+++ b/Automation-App/src/app/components/air-temperature/air-temperature.component.html
@@ -54,6 +54,19 @@
                 </ion-item>
               </ion-col>
             </ion-row>
+            <h3>Power Outlets</h3>
+            <ion-row>
+              <ion-list>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="heater_enabled"></ion-toggle>
+                  <ion-label>Heater</ion-label>
+                </ion-item>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="cooler_enabled"></ion-toggle>
+                  <ion-label>Cooler</ion-label>
+                </ion-item>
+              </ion-list>
+            </ion-row>
           </div>
           <h3>Alarm Settings</h3>
           <ion-row>
