--- a/Automation-App/src/app/components/humidity/humidity.component.html
+++ b/Automation-App/src/app/components/humidity/humidity.component.html
@@ -55,6 +55,19 @@
                 </ion-item>
               </ion-col>
             </ion-row>
+            <h3>Power Outlets</h3>
+            <ion-row>
+              <ion-list>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="humidifier_enabled"></ion-toggle>
+                  <ion-label>Humidifier</ion-label>
+                </ion-item>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="dehumidifier_enabled"></ion-toggle>
+                  <ion-label>Dehumidifier</ion-label>
+                </ion-item>
+              </ion-list>
+            </ion-row>
           </div>
           <h3>Alarm Settings</h3>
           <ion-row>
