--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -17,7 +17,7 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item lines="none">
-                  <ion-checkbox formControlName="monitoring_only" mode="md" (ionChange)="onMonitoringOnly()"></ion-checkbox>
+                  <ion-checkbox formControlName="monitoring_only" mode="md"></ion-checkbox>
                   <ion-label>Monitoring Only</ion-label>
                 </ion-item>
               </ion-col>
