setup process for esp32 created

--- a/Automation-App/src/app/app.component.html
+++ b/Automation-App/src/app/app.component.html
@@ -2,9 +2,7 @@
   <ion-menu side="start">
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>
-        Dashboard
-        </ion-title>
+        <ion-title>Hydrotek Farms</ion-title>
       </ion-toolbar>
     </ion-header>
    <!--side menu options-->
