Clusters Deleted From Monitoring Page and Side Menu Functionality integrated

--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.html
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.html
@@ -10,31 +10,17 @@
           </ion-item>
         </ion-col>
         <ion-col offset="1" size="5" class="details">
-            <div *ngIf="!sensor.monitoring_only">
-              <div *ngIf="!sensor.day_and_night">
-                <ion-label class="title">Target Value</ion-label>
-                <div>
-                  <ion-icon name="locate-sharp"></ion-icon>
-                  <ion-label class="value">{{ sensor.target_val }} &#8451;</ion-label>
-                </div>
-              </div>
-              <div *ngIf="sensor.day_and_night">
-                <ion-label class="title">Day Target Value</ion-label>
-                <div>
-                  <ion-icon name="locate-sharp"></ion-icon>
-                  <ion-label class="value">{{ sensor.day_target_value }} &#8451;</ion-label>
-                </div>
-                <ion-label class="title">Night Target Value</ion-label>
-                <div>
-                  <ion-icon name="locate-sharp"></ion-icon>
-                  <ion-label class="value">{{ sensor.night_target_value }} &#8451;</ion-label>
-                </div>
+            <div *ngIf="!sensor.monit_only">
+              <ion-label class="title">Target Value</ion-label>
+              <div>
+                <ion-icon name="locate-sharp"></ion-icon>
+                <ion-label class="value">{{ sensor.tgt }} &#8451;</ion-label>
               </div>
             </div>
             <ion-label class="title">Alarm Settings</ion-label>
             <div>
               <ion-icon name="alarm"></ion-icon>
-              <ion-label class="value">{{ sensor.range }} &#8451;</ion-label>
+              <ion-label class="value">{{ sensor.alarm_min + ' - ' + sensor.alarm_max }} &#8451;</ion-label>
             </div>
         </ion-col>
       </ion-row>
