Routing tabs fixed and Control Page Cluster Integration Started

--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -1,6 +1,4 @@
-<!--selecting menu options-->
 <ion-content>
-
   <div class="content">
  
     <div *ngIf="currentDeviceSettings != null">
@@ -28,7 +26,7 @@
         </ion-row>
         <ion-row>
           <ion-col size="10" offset="1">
-            <h6>Click the Create Device Button in the menu to create a Hydrotek Device</h6>
+            <h6>Click the Create Device Button in the side menu to create a Hydrotek Device</h6>
           </ion-col>
         </ion-row>
       </ion-grid>
