--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -15,23 +15,23 @@
           <hr color="grey"/>
           <div class="group">
             <ion-item lines="none">
-              <ion-checkbox formControlName="monitoring_only" mode="md" slot="end"></ion-checkbox>
+              <ion-checkbox formControlName="monit_only" mode="md" slot="end"></ion-checkbox>
               <ion-label>Monitoring Only</ion-label>
             </ion-item>
             <hr color="grey"/>
           </div>
   
-          <div *ngIf="!phForm.get('monitoring_only').value" [formGroup]="controlForm">
+          <div *ngIf="!phForm.get('monit_only').value" [formGroup]="controlForm">
             <div class="settings-group">
               <h3>Dose Settings</h3>
               <ion-list>
                 <ion-item>
                   <ion-label position="floating">Dose Time</ion-label>
-                  <ion-input formControlName="dosing_time" type="number"></ion-input>
+                  <ion-input formControlName="dose_time" type="number"></ion-input>
                 </ion-item>
                 <ion-item>
                   <ion-label position="floating">Dosing Interval</ion-label>
-                  <ion-input formControlName="dosing_interval" type="number"></ion-input>
+                  <ion-input formControlName="dose_interv" type="number"></ion-input>
                 </ion-item>
               </ion-list>  
             </div>
@@ -39,13 +39,13 @@
             <div class="settings-group">
               <h3>Pumps</h3>
               <ion-list formGroupName="pumps">
-                <ion-item>
-                  <ion-toggle slot="start" formControlName="pump_1_enabled"></ion-toggle>
+                <ion-item formGroupName="pump_1">
+                  <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
                   <ion-label>Pump 6</ion-label>
                   <ion-label>pH Up</ion-label>
                 </ion-item>
-                <ion-item>
-                  <ion-toggle slot="start" formControlName="pump_2_enabled"></ion-toggle>
+                <ion-item formGroupName="pump_2">
+                  <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
                   <ion-label>Pump 7</ion-label>
                   <ion-label>pH Down</ion-label>
                 </ion-item>
@@ -56,29 +56,29 @@
               <h3>Desired Value</h3>
               <ion-row>
                 <ion-item lines="none">
-                  <ion-checkbox formControlName="day_and_night" mode="md"></ion-checkbox>
+                  <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
                   <ion-label >Different Targets for Day and Night</ion-label>
                 </ion-item>
               </ion-row>
-              <ion-row *ngIf="controlForm.get('day_and_night').value">
+              <ion-row *ngIf="controlForm.get('d_n_enabled').value">
                 <ion-col size="4">
                   <ion-item>
                     <ion-label position="floating">Day Target</ion-label>
-                    <ion-input formControlName="day_target_value" type="number"></ion-input>
+                    <ion-input formControlName="day_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col offset="2" size="4">
                   <ion-item>
                     <ion-label position="floating">Night Target</ion-label>
-                    <ion-input formControlName="night_target_value" type="number"></ion-input>
+                    <ion-input formControlName="night_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
-              <ion-row *ngIf="!controlForm.get('day_and_night').value">
+              <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
                 <ion-col size="12">
                   <ion-item>
                     <ion-label position="floating">Target</ion-label>
-                    <ion-input formControlName="target_value" type="number"></ion-input>
+                    <ion-input formControlName="tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
