--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -17,39 +17,39 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item lines="none">
-                  <ion-checkbox formControlName="monitoring_only" mode="md"></ion-checkbox>
+                  <ion-checkbox formControlName="monit_only" mode="md"></ion-checkbox>
                   <ion-label>Monitoring Only</ion-label>
                 </ion-item>
               </ion-col>
             </ion-row>
           </div>
-          <div *ngIf="!waterTemperatureForm.get('monitoring_only').value" [formGroup]="controlForm"> 
+          <div *ngIf="!waterTemperatureForm.get('monit_only').value" [formGroup]="controlForm"> 
             <h3>Desired Value</h3>
             <ion-row>
               <ion-item lines="none">
-                <ion-checkbox formControlName="day_and_night" mode="md"></ion-checkbox>
+                <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
                 <ion-label>Different Targets for Day and Night</ion-label>
               </ion-item>
             </ion-row>
-            <ion-row *ngIf="controlForm.get('day_and_night').value">
+            <ion-row *ngIf="controlForm.get('d_n_enabled').value">
               <ion-col size="6">
                 <ion-item>
                   <ion-label position="floating">Day Target Value</ion-label>
-                  <ion-input formControlName="day_target_value" type="number"></ion-input>
+                  <ion-input formControlName="day_tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col size="6">
                 <ion-item>
                   <ion-label position="floating">Night Target Value</ion-label>
-                  <ion-input formControlName="night_target_value" type="number"></ion-input>
+                  <ion-input formControlName="night_tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-            <ion-row *ngIf="!controlForm.get('day_and_night').value">
+            <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
               <ion-col size="12">
                 <ion-item>
                   <ion-label position="floating">Target Value</ion-label>
-                  <ion-input formControlName="target_value" type="number"></ion-input>
+                  <ion-input formControlName="tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -57,11 +57,11 @@
             <ion-row>
               <ion-list>
                 <ion-item>
-                  <ion-toggle slot="start" formControlName="heater_enabled"></ion-toggle>
+                  <ion-toggle slot="start" formControlName="up_ctrl"></ion-toggle>
                   <ion-label>Heater</ion-label>
                 </ion-item>
                 <ion-item>
-                  <ion-toggle slot="start" formControlName="cooler_enabled"></ion-toggle>
+                  <ion-toggle slot="start" formControlName="down_ctrl"></ion-toggle>
                   <ion-label>Cooler</ion-label>
                 </ion-item>
               </ion-list>
