new device button added to side menu

--- a/Automation-App/src/app/add-system/add-system.page.html
+++ b/Automation-App/src/app/add-system/add-system.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-title>Setup System</ion-title>
     <ion-buttons slot="end">
-      <ion-button  (click)="dismiss()"><ion-icon name="close"></ion-icon></ion-button>
+      <ion-button  (click)="dismiss()"><ion-icon name="back"></ion-icon></ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -16,7 +16,7 @@
             <h2 class="general_settings">General Settings</h2>
           </ion-col>
           <ion-col size="5" class="button_col">
-            <ion-button class="add_button" type="submit">Create<ion-icon name="add"></ion-icon></ion-button>
+            <ion-button class="add_button" type="submit">Create</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
