--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.html
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.html
@@ -5,7 +5,7 @@
         <ion-col size="6">
           <h3 class="header-title" lines="none">{{ sensor.display_name }}</h3>
           <ion-item lines="none">
-            <h1>{{ sensor.current_val }}&#8451;</h1>
+            <h1>{{ currentVal }}&#8451;</h1>
             <ion-icon class="check-icon" name="checkmark-circle"></ion-icon>
           </ion-item>
         </ion-col>
