--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -7,9 +7,7 @@
         <h2>{{ timeStamp }}</h2>
       </div>
       <span *ngFor="let sensorSettings of currentDeviceSettings">
-        <sensor-display 
-          [sensor]="sensorSettings">
-          </sensor-display>
+        <sensor-display [sensor]="sensorSettings" [allLiveData]="liveData"></sensor-display>
       </span>
     </div>
    
