--- a/Automation-App/src/app/app.component.html
+++ b/Automation-App/src/app/app.component.html
@@ -6,41 +6,42 @@
           <ion-title>Hydrotek Farms</ion-title>
         </ion-toolbar>
       </ion-header>
-     <!--side menu options-->
-     <ion-content>
-      <ion-list>
-        <ion-item>
-          <ion-title>Fertigation Systems</ion-title>
-          <ion-button (click)="newDevice()" fill="clear" size="large">
-            <ion-icon name="add-circle-outline"></ion-icon>
-          </ion-button>
-        </ion-item>
-        <ion-menu-toggle *ngFor="let device of (variableManagementService.fertigationSystemSettings | async); let i = index">
-          <ion-item lines="none" routerLink="/dashboard/monitoring" [queryParams]="{ deviceType: device.type, deviceIndex: i }">
-            <ion-icon name="leaf-outline" slot="start"></ion-icon>
-            <ion-label>{{ device.name }}</ion-label>
+      <!--side menu options-->
+      <ion-content>
+        <ion-list>
+          <ion-item>
+            <ion-title>Fertigation Systems</ion-title>
+            <ion-button (click)="newDevice()" fill="clear" size="large">
+              <ion-icon name="add-circle-outline"></ion-icon>
+            </ion-button>
           </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-      <ion-list>
-        <ion-item>
-          <ion-title>Climate Controllers</ion-title>
-          <ion-button (click)="newDevice()" fill="clear" size="large">
-            <ion-icon name="add-circle-outline"></ion-icon>
-          </ion-button>
-        </ion-item>
-        <ion-menu-toggle *ngFor="let device of (variableManagementService.climateControllerSettings | async); let i = index">
-          <ion-item lines="none" routerLink="/dashboard/monitoring" [queryParams]="{ deviceType: device.type, deviceIndex: i }">
-            <ion-icon name="cloudy-outline" slot="start"></ion-icon>
-            <ion-label>{{ device.name }}</ion-label>
+          <ion-menu-toggle auto-hide="false"
+            *ngFor="let device of (variableManagementService.fertigationSystemSettings | async); let i = index">
+            <ion-item lines="none" routerLink="/dashboard/monitoring"
+              [queryParams]="{ deviceType: device.type, deviceIndex: i }">
+              <ion-icon name="leaf-outline" slot="start"></ion-icon>
+              <ion-label>{{ device.name }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+        <ion-list>
+          <ion-item>
+            <ion-title>Climate Controllers</ion-title>
+            <ion-button (click)="newDevice()" fill="clear" size="large">
+              <ion-icon name="add-circle-outline"></ion-icon>
+            </ion-button>
           </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-     </ion-content>
-    </ion-menu> 
-    <ion-router-outlet id="main"></ion-router-outlet> 
+          <ion-menu-toggle auto-hide="false"
+            *ngFor="let device of (variableManagementService.climateControllerSettings | async); let i = index">
+            <ion-item lines="none" routerLink="/dashboard/monitoring"
+              [queryParams]="{ deviceType: device.type, deviceIndex: i }">
+              <ion-icon name="cloudy-outline" slot="start"></ion-icon>
+              <ion-label>{{ device.name }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
-
-
-
