--- a/Automation-App/src/app/dashboard/control/control.page.html
+++ b/Automation-App/src/app/dashboard/control/control.page.html
@@ -12,7 +12,10 @@
         <div *ngIf="currentDeviceType == FertigationSystemString">  
           <ph *ngIf="ph" [parentForm]="settingsForm"></ph>
           <ec *ngIf="ec" [parentForm]="settingsForm"></ec>
-          <water-temp *ngIf="water_temperature" [parentForm]="settingsForm"></water-temp>
+          <water-temp *ngIf="waterTemperature" [parentForm]="settingsForm"></water-temp>
+          <grow-lights *ngIf="growLights" [parentForm]="settingsForm"></grow-lights>
+          <irrigation *ngIf="irrigation" [parentForm]="settingsForm"></irrigation>
+          <reservoir *ngIf="reservoir" [parentForm]="settingsForm"></reservoir>
         </div>
         <div *ngIf="currentDeviceType == ClimateControllerString">
           <air-temperature *ngIf="air_temperature" [parentForm]="settingsForm"></air-temperature>
