--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -38,15 +38,13 @@
             
             <div class="settings-group">
               <h3>Pumps</h3>
-              <ion-list formGroupName="pumps">
-                <ion-item formGroupName="pump_1">
-                  <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
-                  <ion-label>Pump 6</ion-label>
+              <ion-list>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="up_ctrl"></ion-toggle>
                   <ion-label>pH Up</ion-label>
                 </ion-item>
-                <ion-item formGroupName="pump_2">
-                  <ion-toggle slot="start" formControlName="enabled"></ion-toggle>
-                  <ion-label>Pump 7</ion-label>
+                <ion-item>
+                  <ion-toggle slot="start" formControlName="down_ctrl"></ion-toggle>
                   <ion-label>pH Down</ion-label>
                 </ion-item>
               </ion-list>
